--- a/assets/css/variaveis.css
+++ b/assets/css/variaveis.css
@@ -1,6 +1,7 @@
 :root{
     --primary-color: #121212a6;
     --white-color: #ffff;
+    --black-color: #0e0e0e;
     --ligth-gray-color:#eeee;
     --gap:3rem;
     --secondary-color: crimson;
