--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -17,11 +17,12 @@ h1,h2,h3,h4,h5,h6{
     font-family: 'Montserrat', sans-serif;
 }
 h1{
-    font-size: 6rem;
+    font-size: 4rem;
     text-transform: uppercase;
 }
 h2{
-    font-size: 6rem;
+    font-style: italic;
+    font-size: 4rem;
     margin-bottom: 5rem;
     text-transform: uppercase;
     line-height: 1.2;
