--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,19 @@
 .text-h2-sobre {
     font-size: 1.4rem;
 }
+.funcionamentos {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+.text-funcionamento {
+    max-width: 1200px;
+}
+.text-funcionamento > h2 {
+    text-align: center;
+}
+
 .intro-text-content, .intro-img {
     display: flex;
     flex-flow: column wrap;
@@ -290,7 +303,10 @@
     .grid-description {
         padding-top: 0;
     }
-    
+    .text-funcionamento {
+        width: 80%;
+        padding-bottom: 8vh;
+    }
 }
 @media (max-width: 320px) {
     .close-menu-label::after {
