--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,61 +138,92 @@
     font-size: 1.8rem;
 }
 .contact-form {
-    grid-column: span 2;
-    
-
+    padding-bottom: 10vh;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+.description-contato {
+    width: 80%;
 }
 .form-grid legend {
+    color: var(--black-color);
     font-style: italic;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     margin-bottom: 3rem;
 }
 .contact-form .form-grid {
-    border: none;
     display: flex;
+    background: #6a6d6c56;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: var(--gap);
+    gap: 3rem;
+    padding: 1rem;
+    max-width: 80%;
+}
+
+.full-width {
+    width: 100%;
+}
+
+textarea#messsage {
+    color: #7f8584;
+    height: 20vh;
+    display: flex;
 }
 
 .form-group {
+    color: var(--black-color);
+    display: flex;
+    flex-direction: column;
     flex: 1 1 320px;
 }
 
 .form-group label {
+
     display: block;
     margin-bottom: 1rem;
 }
+
+#message {
+    color: #7f8584;
+}
+
 .form-group input,
 .form-group textarea {
     border: none;
-    background: var(--white-color);
     padding: 1.5rem 2rem;
     width: 100%;
-    font-size: 3rem;
+    font-size: 1.8rem;
     outline: none;
 }
+
 .form-group input:focus,
-.form-group textarea:focus{
-    box-shadow: 0px 0px 5px 5px var(--secondary-color);
+.form-group textarea:focus {
+    box-shadow: 0px 0px 5px 5px #c48e2bde;
 }
+
 .form-group button {
-    border: 0.5rem solid var(--white-color);
+    border: 0.5rem solid #131212;
     background: none;
-    color: var(--black-color);
-    padding: 1.5rem 2rem;
+    color: #000000;
+    padding: 1.5rem 1.5rem;
     font-size: 2rem;
     cursor: pointer;
-    transition: all 450ms ease-in;
+    transition: all 300ms ease-in-out;
 }
 
 .form-group button:hover {
-    background: #0047e0;
-    color: var(--white-color);
+    background: #245f18;
+    color: #ffffff;
+    border: 0.5rem solid #705a5a63;
+    transition: all 450ms ease-in;
 }
+
 .form-group::placeholder {
-    color: var(--black-color);
+    color: #eee;
 }
+
 .back-to-top{
     position: fixed;
     bottom: 2rem;
@@ -294,6 +325,10 @@
     }
     .close-menu:checked~.close-menu-label::after {
         content: '×';
+    }
+    .contact-form {
+        display: flex;
+        justify-content: center;
     }
     .enviar {
         text-align: center;
