--- a/assets/css/variaveis.css
+++ b/assets/css/variaveis.css
@@ -4,6 +4,6 @@
     --black-color: #0e0e0e;
     --ligth-gray-color:#eeee;
     --gap:3rem;
-    --secondary-color: crimson;
+    --secondary-color: rgba(197, 83, 30, 0.877);
     --color-nav:#f0f0f8;
 }
