--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -340,6 +340,9 @@ textarea#messsage {
     .menu-spacing {
         display: none;
     }
+    .grid {
+        gap: var(--gap);
+    }
     .grid-description {
         padding-top: 0;
     }
