--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
 }
 .text-index {
     font-size: 3rem;
+    padding-top: 5vh;
 }
 .text-h2 {
     font-size: 2rem;
@@ -37,7 +38,8 @@
 }
 .intro-text-content > h1 {
     font-weight: 200;
-    font-size: 2rem;
+    font-style: italic;
+    font-size: 3rem;
 }
 .whatsapp-btn > a {
     padding: 7px;
@@ -348,6 +350,9 @@ textarea#messsage {
     }
     .text-funcionamento {
         width: 80%;
+    }
+    .text-index {
+        padding: 0;
     }
 }
 @media (max-width: 320px) {
