--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,7 +259,7 @@ textarea#messsage {
     text-align: center;
     flex-direction: column;
     align-items: center;
-    min-height: 120vh;
+    height: 120vh;
     display: flex;
     align-items: flex-end;
 }
