atualização de formulário

--- a/assets/css/variaveis.css
+++ b/assets/css/variaveis.css
@@ -2,8 +2,8 @@
     --primary-color: #121212a6;
     --white-color: #ffff;
     --black-color: #0e0e0e;
-    --ligth-gray-color:#eeee;
+    --ligth-gray-color:#a39e9e70;
     --gap:3rem;
-    --secondary-color: rgba(197, 83, 30, 0.877);
+    --secondary-color: rgba(5, 15, 161, 0.877);
     --color-nav:#f0f0f8;
 }
