--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,10 @@
     min-height: 100vh;
 
 }
+.banner-agregando {
+    width: 100%;
+    border-radius: 25px;
+}
 .text-index {
     font-size: 3rem;
     padding-top: 5vh;
