--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@
 }
 .text-index {
     font-size: 3rem;
+    padding-top: 5vh;
 }
 .text-h2 {
     font-size: 2rem;
@@ -349,6 +350,12 @@ textarea#messsage {
         width: 100%;
         max-width: 100%;
         max-height: 100%;
+    }
+    .text-index {
+        padding: 0;
+    }
+    .trabalhe {
+        padding-bottom: 5vh;
     }
     .gallery-img img{
         width: 100%;
