--- a/assets/css/trabalheComAGente.css
+++ b/assets/css/trabalheComAGente.css
@@ -67,6 +67,7 @@ img.carro-img  {
         display: flex;
         gap: 2rem;
         margin-top: 2vh;
+        margin-bottom: 2vh;
     }
     .Opcao_mei { 
         margin-top: 10vh;
