--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,21 @@
 }
 .banner-agregando {
     width: 100%;
+    height: 60vh;
     border-radius: 25px;
+    padding-bottom: 3vh;
+}
+a.button-agregando {
+    font-weight: 700;
+    font-size: larger;
+    color: #ffffff;
+    border-radius: 15px;
+    padding: 8px;
+    background-color: black;
+}
+a.button-agregando:hover {
+    background-color: #245f18;
+    color: #000000;
 }
 .text-index {
     font-size: 3rem;
@@ -366,7 +380,10 @@ textarea#messsage {
     .grid-one-content {
         align-items: center;
     }
-    
+    /* banner agregando */
+    .banner-agregando {
+        height: auto;
+    }
     /* Contato */
     .contact-form {
         display: flex;
