--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,9 +9,9 @@
 }
 .banner-agregando {
     width: 100%;
-    height: 60vh;
+    height: 58vh;
     border-radius: 25px;
-    padding-bottom: 3vh;
+    margin-bottom: 1vh;
 }
 a.button-agregando {
     font-weight: 700;
